--- a/config/locales/models/users.fr.yml
+++ b/config/locales/models/users.fr.yml
@@ -8,6 +8,7 @@ fr:
       user:
         email: "Adresse email"
         password: "Mot de passe"
+        remember_me: "Se souvenir de moi"
         sign_in_count: "Nombre de connexions"
         last_sign_in_at: "Dernière connexion"
         created_at: "Date de création"
