Refonte du design des utilsiateur, modification du processus de synchro

--- a/config/locales/models/users.fr.yml
+++ b/config/locales/models/users.fr.yml
@@ -18,3 +18,4 @@ fr:
         lastname: "Nom"
         fullname: "Nom complet"
         role: "Role"
+        last_gram_sync_at: "Dernière synchronisation"
