--- a/config/locales/core.fr.yml
+++ b/config/locales/core.fr.yml
@@ -45,3 +45,7 @@ fr:
         fail: 'Le compte de %{user}r n''a pas pu être mis à jour'
       destroy:
         success: 'L''utilsateur ''%{user}'' a bien été supprimé'
+      sync:
+        success: 'Le compte de %{user} a bien été synchronisé avec le GrAM !'
+        fail: 'Une erreur à eu lieu lors de la synchronisation du compte de %{user}'
+        too_soon: 'Le compte de %{user} a déjà été synchronisé récement, reessayé dans %{eta} secondes'
