--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -205,3 +205,8 @@ fr:
       long: "%A %d %B %Y %Hh%M"
       short: "%d %b %Hh%M"
     pm: pm
+
+  will_paginate:
+      previous_label: '&laquo; Pr&eacute;c&eacute;dent'
+      next_label: 'Suivant &raquo;'
+      page_gap: "..."
